--- a/appspec.yml
+++ b/appspec.yml
@@ -6,14 +6,14 @@ files:
 
 hooks:
   BeforeInstall:
-    - location: scripts/clean_old_files.sh
+    - location: scripts/cleanoldfile.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/install_dependencies.sh
+    - location: scripts/installdepen.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
+    - location: scripts/servicestart.sh
       timeout: 300
       runas: root
