--- a/appspec.yml
+++ b/appspec.yml
@@ -6,14 +6,14 @@ files:
 
 hooks:
   BeforeInstall:
-    - location: scripts/cleanoldfile.sh
+    - location: cleanoldfile.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/installdepen.sh
+    - location: installdepen.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/servicestart.sh
+    - location: servicestart.sh
       timeout: 300
       runas: root
